@@ -1,3 +1,8 @@
+2012-01-08  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/plot.c:  Allow shell commands from ~/.gnuplot but not from shared
+	initialization files.
+
 2012-01-07  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/misc.c (lf_pop): If the current input stream from "load file" is
